--- a/design.css
+++ b/design.css
@@ -36,7 +36,7 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
     margin-right: 10%;
     border-radius: 5px;
     float: right;
-    background: linear-gradient(to bottom, #800000, #FFFFFF);
+    background: background-color: #F5F5DC;
     
     width: 20%;
     padding: 10px;
