--- a/design.css
+++ b/design.css
@@ -1,53 +1,29 @@
 .header {background-color: #F5F5DC; Height: 17vh;}
-
 .footer {background-color: #F5F5DC ; height: 20vh; clear: both}
-
-.name {float: left; margin-top: 3%; margin-left: 3%; font-size: 50px;font-family: 'Syncopate', sans-serif;color: #00008B;}
+.name {float: left; margin-top: 3%; margin-left: 3%; font-size: 7vh;font-family: 'Syncopate', sans-serif;color: #00008B;}
 body {background: linear-gradient(to bottom, #800000, #FFFFFF) fixed;}
-ul {list-style-type: none; margin: 0; padding:0; background-color: #b5dcb3;}
-li a {color: rgb(0, 0, 12); padding: 8px 16px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
+ul {list-style-type: none; margin: 0; padding:0;}
+li a {color: #00008B; padding: 8px 16px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
 li a:hover {background-color: lightgray}
 li {float: right;}
 a {display: block; padding: 8px;}
 img { margin-left: auto; margin-right: auto; width: 100%;}
-
 .forma {text-align: center;font-family: 'Open Sans', sans-serif;}
-
-textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff}
-input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff}
+textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
+input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 .imgcontact {width:23%; border: 2px solid #ddd;border-radius: 3px; position: absolute;left: 70px;top: 235px; height: 28%;}
 .map {position: absolute;right: 100px;top: 170px; height: 28%;}
 .adress {position: absolute;left: 100px;top: 170px;font-family: 'Open Sans', sans-serif; }
-input[type=submit]:hover {background-color: #555555;}
-select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff}
-
+input[type=submit]:hover {background-color: #555555;font-family: 'Open Sans', sans-serif;}
+select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 .imgbook {width:20%; border: 2px solid #F5F5DC;border-radius: 3px; position: absolute;left: 100px;top: 284px; height: 20%;}
-.line {overflow: hidden;position: fixed;bottom: 8px;width: 100%;color:lightgrey;} 
-.info{ text-align: center;overflow: hidden;position: fixed;bottom: 0;width: 100%;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;
-} 
-* {
-    box-sizing: border-box;
-  }
+.line {overflow: hidden;position: absolute;bottom: 1vh;width: 100%;color:lightgrey; text-align: center;} 
+.info{ text-align: center;overflow: hidden;position: fixed;bottom: 0;width: 100%;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;} 
+.column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 10px;height: 400px;font-family: 'Open Sans', sans-serif;} 
+.row:after {content: "";display: table;clear: both;}
+.imgservice {margin-right: 10%;float: right;width: 20%;padding: 10px;height: 200px; margin-top: 2%;position: sticky;
   
-  /* Create four equal columns that floats next to each other */
-  .column {
-    display: block;
-   
-    margin-right: 10%;
-    border-radius: 5px;
-    float: right;
-    background: background-color: #F5F5DC;
-    
-    width: 20%;
-    padding: 10px;
-    height: 400px; /* Should be removed. Only for demonstration */
-  }
   
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;  
-}
+  
 
-  
+}
