--- a/design.css
+++ b/design.css
@@ -11,12 +11,12 @@ img { margin-left: auto; margin-right: auto; width: 100%;}
 .forma {text-align: center;font-family: 'Open Sans', sans-serif;}
 textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
-.imgcontact {width:23%; border: 2px solid #ddd;border-radius: 3px; position: absolute;left: 70px;top: 235px; height: 28%;}
+.imgcontact {width:23%;position: absolute;left: 70px;top: 235px; height: 28%;}
 .map {position: absolute;right: 100px;top: 170px; height: 28%;}
 .adress {position: absolute;left: 100px;top: 170px;font-family: 'Open Sans', sans-serif; }
 input[type=submit]:hover {background-color: #555555;font-family: 'Open Sans', sans-serif;}
 select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
-.imgbook {width:20%; border: 2px solid #F5F5DC;border-radius: 3px; position: absolute;left: 100px;top: 284px; height: 20%;}
+.imgbook {width:20%; position: absolute;left: 10vh;top: 284px; height: 20vh;}
 .line {overflow: hidden;position: absolute;bottom: 1vh;width: 100%;color:lightgrey; text-align: center;} 
 .info{ text-align: center;overflow: hidden;position: fixed;bottom: 0;width: 100%;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;} 
 .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 10px;height: 400px;font-family: 'Open Sans', sans-serif;} 
