--- a/design.css
+++ b/design.css
@@ -12,7 +12,7 @@ img { margin-left: auto; margin-right: auto; width: 100%;}
 textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 .imgcontact {width:23%;position: absolute;left: 70px;top: 235px; height: 28%;}
-.map {position: absolute;right: 100px;top: 170px; height: 28%;}
+.map {position: absolute;right: 150px;top: 170px;}
 .adress {position: absolute;left: 100px;top: 170px;font-family: 'Open Sans', sans-serif; }
 input[type=submit]:hover {background-color: #555555;font-family: 'Open Sans', sans-serif;}
 select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
