--- a/design.css
+++ b/design.css
@@ -23,10 +23,24 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
 .row:after {content: "";display: table;clear: both;}
 .imgservice {margin-right: 10%;float: right;width: 20%;padding: 10px;height: 200px; margin-top: 2%;position: sticky;}
 
+
+
+
 @media screen and (max-width: 768px)
 {
     body {background: linear-gradient(to bottom, #00008B, #FFFFFF) fixed;}
     .adress {position: absolute;left: 100px;top: 400px;font-family: 'Open Sans', sans-serif; }
+    .name {float: left; margin-top: 3%; margin-left: 3%; font-size: 3vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
+    .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 1px;height: 300px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static} 
+    .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
+    .imgcontact {width:23%;position: absolute;left: 200px;top: 150px; height: 28%;}
+    .imgbook {width:20%; position: absolute;left: 4vh;top: 284px; height: 20vh;}
+}
+
+@media screen and (max-width: 470px)
+{
+    body {background: linear-gradient(to bottom, #00008B, #FFFFFF) fixed;}
+    .adress {position: absolute;left: 100px;top: 800px;font-family: 'Open Sans', sans-serif; }
     .name {float: left; margin-top: 3%; margin-left: 3%; font-size: 3vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
     .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 1px;height: 300px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static} 
     .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
