--- a/design.css
+++ b/design.css
@@ -26,7 +26,7 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
 
 
 
-@media screen and (max-width: 768px)
+@media all and (max-width: 768px)
 {
     body {background: linear-gradient(to bottom, #00008B, #FFFFFF) fixed;}
     .adress {position: absolute;left: 100px;top: 400px;font-family: 'Open Sans', sans-serif; }
@@ -37,7 +37,7 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
     .imgbook {width:20%; position: absolute;left: 4vh;top: 284px; height: 20vh;}
 }
 
-@media screen and (max-width: 470px)
+@media all and (max-width: 470px)
 {
     body {background: linear-gradient(to bottom, #00008B, #FFFFFF) fixed;}
     .adress {position: absolute;left: 100px;top: 800px;font-family: 'Open Sans', sans-serif; }
