--- a/design.css
+++ b/design.css
@@ -13,16 +13,16 @@ textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px sol
 input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 .imgcontact {width:23%;position: absolute;left: 70px;top: 235px; height: 28%;}
 .map {position: absolute;right: 100px;top: 170px;}
-.adress {position: absolute;left: 100px;top: 170px;font-family: 'Open Sans', sans-serif; }
+.adress {position: absolute;left: 250px;top: 170px;font-family: 'Open Sans', sans-serif; }
 input[type=submit]:hover {background-color: #555555;font-family: 'Open Sans', sans-serif;}
 select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 .imgbook {width:20%; position: absolute;left: 10vh;top: 284px; height: 20vh;}
-
-.info{ text-align: center;overflow: hidden;position: fixed;bottom: 0;width: 100%;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;} 
+.infoabout { clear: both; text-align: center;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;} 
+.info{ clear: both; text-align: center;position: absolute;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;} 
 .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 10px;height: 400px;font-family: 'Open Sans', sans-serif;} 
 .row:after {content: "";display: table;clear: both;}
 .imgservice {margin-right: 10%;float: right;width: 20%;padding: 10px;height: 200px; margin-top: 2%;position: sticky;}
-
+.imgabout {position: absolute;right: 100px;top: 170px;width: 30%}
 
 
 
@@ -30,11 +30,16 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
 {
     
     .adress {position: absolute;left: 100px;top: 400px;font-family: 'Open Sans', sans-serif; }
-    .name {float: left; margin-top: 3%; margin-left: 3%; font-size: 3vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
-    .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 1px;height: 300px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static} 
+    .name {float: left; margin-top: 3%; margin-left: 3%; font-size: 4vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
+    .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 40%;padding: 1px;height: 150px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static} 
     .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
-    .imgcontact {width:17%;position: absolute;left: 200px;top: 150px; height: 28%;}
+    .imgcontact {width:17%;position: absolute;left: 200px;top: 140px; height: 28%;}
     .imgbook {width:20%; position: absolute;left: 4vh;top: 310px; height: 20vh;}
+    ul {list-style-type: none; margin: 0; padding:0;}
+    li a {color: #00008B; padding: 3px 7px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
+    li a:hover {background-color: lightgray}
+    a {display: block; padding: 8px;}
+    .imgabout {position: absolute;right: 100px;top: 170px;width: 20%;top:130px;}
 }
 
 
