--- a/design.css
+++ b/design.css
@@ -117,7 +117,7 @@ header {
         width: 100%;
     }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 768px) {
     .tab-nav-label {
         display: grid;
         cursor: pointer;
@@ -134,6 +134,7 @@ header {
         transition: all ease-in-out 0.4s;
         -o-transition: all ease-in-out 0.4s;
         -webkit-transition: all ease-in-out 0.4s;
+        orientation:portrait;
      }
     .nav-checkbox input:checked ~ .tab-content {
         max-height: 400px;
