--- a/design.css
+++ b/design.css
@@ -1,35 +1,30 @@
-.header {background-color: #F5F5DC; Height: 17vh;}
-.footer {background-color: #F5F5DC ; height: 20vh; clear: both}
-.name {float: left; margin-top: 3%; margin-left: 3%; font-size: 7vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
-body {background: linear-gradient(to bottom, #800000, #FFFFFF) fixed;}
-ul {list-style-type: none; margin: 0; padding:0;}
-li a {color: #00008B; padding: 8px 16px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
-li a:hover {background-color: lightgray}
-li {float: right;}
-a {display: block; padding: 8px;}
+
+
+body {background: linear-gradient(to bottom, #F5F5DC , #800000) fixed;}
+
 img { margin-left: auto; margin-right: auto; width: 100%;}
-.forma {text-align: center;font-family: 'Open Sans', sans-serif;}
-textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
+.forma {text-align: center;font-family: 'Open Sans', sans-serif;color:white}
+textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;color:white}
 input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 .imgcontact {width:23%;position: absolute;left: 70px;top: 235px; height: 28%;}
-.map {position: absolute;right: 100px;top: 170px;}
-.adress {position: absolute;left: 250px;top: 170px;font-family: 'Open Sans', sans-serif; }
+.map {position: absolute;right: 100px;top: 170px;height: 50%;}
+.adress {position: absolute;left: 250px;top: 170px;font-family: 'Open Sans', sans-serif;color:white }
 input[type=submit]:hover {background-color: #555555;font-family: 'Open Sans', sans-serif;}
 select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
-.imgbook {width:20%; position: absolute;left: 10vh;top: 284px; height: 20vh;}
-.infoabout { clear: both; text-align: center;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;} 
-.info{ clear: both; text-align: center;position: absolute;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;} 
+.imgbook {width:20%; position: absolute;left: 10vh;top: 284px; height: 20vh;border-radius: 5px;}
+.infoabout { clear: both;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white;margin-left: 200px} 
+.info2{ clear: both; text-align: center;width: 100%; bottom: 0;color:white;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
 .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 10px;height: 400px;font-family: 'Open Sans', sans-serif;} 
 .row:after {content: "";display: table;clear: both;}
 .imgservice {margin-right: 10%;float: right;width: 20%;padding: 10px;height: 200px; margin-top: 2%;position: sticky;}
-.imgabout {position: absolute;right: 100px;top: 170px;width: 30%}
-
+.imgabout {position: absolute;right: 100px;top: 170px;width: 20%}
+.info{ clear: both; text-align: center;position: absolute;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
 
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Open Sans', sans-serif;
 }
 a {
     cursor: pointer;
@@ -39,7 +34,8 @@ header {
     top: 0;
     z-index: 1000;
     width: 100%;
-    background:#F5F5DC;
+  
+    background: linear-gradient(to bottom, #F5F5DC, #800000) fixed;
 }
 .nav-container {
     width: 1280px;
@@ -53,6 +49,7 @@ header {
 }
 .logo {
     font-family: 'Syncopate', sans-serif;
+    font-size: 40px;
     text-decoration: none;
     color: #00008B;
     padding-left: 10px;
@@ -79,6 +76,7 @@ header {
     text-decoration: none;
     color: #00008B;
     position: relative;
+    padding: 8px 16px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px
 }
 .tab-content li a::before {
     content: '';
@@ -154,16 +152,17 @@ header {
 {
     
     .adress {position: absolute;left: 100px;top: 400px;font-family: 'Open Sans', sans-serif; }
-    .name {float: left; margin-top: 3%; margin-left: 3%; font-size: 4vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
+    .logo {float: left; margin-top: 3%; margin-left: 3%; font-size: 4vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
     .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 40%;padding: 1px;height: 150px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static} 
     .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
-    .imgcontact {width:17%;position: absolute;left: 200px;top: 140px; height: 28%;}
+    .imgcontact {width:17%;position: absolute;left: 50px;top: 140px; height: 28%;}
     .imgbook {width:20%; position: absolute;left: 4vh;top: 310px; height: 20vh;}
     ul {list-style-type: none; margin: 0; padding:0;}
     li a {color: #00008B; padding: 3px 7px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
     li a:hover {background-color: lightgray}
     a {display: block; padding: 8px;}
-    .imgabout {position: absolute;right: 100px;top: 170px;width: 20%;top:130px;}
+    .imgabout {position: absolute;right: 100px;top: 100px;width: 15%;}
+    .infoabout { clear: both;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white;margin-left: 10px} 
   
 }
 
