--- a/design.css
+++ b/design.css
@@ -153,7 +153,9 @@ header {
     
     .adress {position: absolute;left: 100px;top: 400px;font-family: 'Open Sans', sans-serif; }
     .logo {float: left; margin-top: 3%; margin-left: 3%; font-size: 4vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
-    .column {display: block; margin-right: 9%;border-radius: 5px;float: right;background: #F5F5DC;width: 40%;padding: 1px;height: 150px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static} 
+
+    .column {margin-left:20px;display: block; border-radius: 5px;background: #F5F5DC;width: 20%;padding: 1px;height: 200px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static;} 
+
     .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
     .imgcontact {width:17%;position: absolute;left: 50px;top: 140px; height: 28%;}
     .imgbook {width:20%; position: absolute;left: 4vh;top: 310px; height: 20vh;}
