--- a/design.css
+++ b/design.css
@@ -1,6 +1,6 @@
 
 
-body {background: linear-gradient(to bottom, #F5F5DC , #800000) fixed;}
+body {background: linear-gradient(to bottom, #F5F5DC , #800000) fixed;margin: 0;padding: 0;box-sizing: border-box;font-family: 'Open Sans', sans-serif;}
 
 img { margin-left: auto; margin-right: auto; width: 100%;}
 .forma {text-align: center;font-family: 'Open Sans', sans-serif;color:white}
@@ -20,96 +20,20 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
 .imgabout {position: absolute;right: 100px;top: 170px;width: 20%}
 .info{ clear: both; text-align: center;position: absolute;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
 
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-}
-a {
-    cursor: pointer;
-}
-header {
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-    width: 100%;
-  
-    background: linear-gradient(to bottom, #F5F5DC, #800000) fixed;
-}
-.nav-container {
-    width: 1280px;
-    margin: auto;
-}
-.nav-checkbox {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    padding: 10px 0;
-}
-.logo {
-    font-family: 'Syncopate', sans-serif;
-    font-size: 40px;
-    text-decoration: none;
-    color: #00008B;
-    padding-left: 10px;
-}
-.tab-nav {
-    outline: none;
-    display: none;
-}
-.tab-nav-label {
-    display: none;
-    color: #00008B;
-}
-.tab-content {
-    grid-column: 3;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.tab-content li {
-    display: inline-block;
-    padding-right: 10px;
-}
-.tab-content li a {
-    text-decoration: none;
-    color: #00008B;
-    position: relative;
-    padding: 8px 16px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px
-}
-.tab-content li a::before {
-    content: '';
-    display: block;
-    height: 3px;
-    background: #00008B;
-    position: absolute;
-    bottom: -5px;
-    left: 0;
-    right: 0;
-    transform-origin: left;
-    transform: scale(0, 1);
-    transition: transform ease-in-out 500ms;
-}
-.tab-content li a:hover::before {
-    transform: scale(1,1);
-}
-.tab-content li a::after {
-    content: '';
-    display: block;
-    height: 3px;
-    background: #fff;
-    position: absolute;
-    top: -5px;
-    left: 0;
-    right: 0;
-    transform-origin: right;
-    transform: scale(0, 1);
-    transition: transform ease-in-out 500ms;
-}
-.tab-content li a:hover::after {
-    transform: scale(1,1);
-}
+a {cursor: pointer;}
+header {position: fixed;top: 0;z-index: 1000;width: 100%;background: linear-gradient(to bottom, #F5F5DC, #800000) fixed;}
+.nav-container {width: 1280px;margin: auto;}
+.nav-checkbox {display: grid;grid-template-columns: 1fr 1fr;align-items: center;padding: 10px 0;}
+.logo {font-family: 'Syncopate', sans-serif;font-size: 40px;text-decoration: none;color: #00008B;padding-left: 10px;}
+.tab-nav {outline: none;display: none;}
+.tab-nav-label {display: none;color: #00008B;}
+.tab-content {grid-column: 3;list-style: none;margin: 0;padding: 0;}
+.tab-content li {display: inline-block;padding-right: 10px;}
+.tab-content li a {text-decoration: none;color: #00008B;position: relative;padding: 4px 8px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
+.tab-content li a::before {content: '';display: block;height: 3px;background: #00008B;position: absolute;bottom: -5px;left: 0;right: 0;transform-origin: left;transform: scale(0, 1);transition: transform ease-in-out 500ms;}
+.tab-content li a:hover::before {transform: scale(1,1);}
+.tab-content li a::after {content: '';display: block;height: 3px;background: #fff;position: absolute;top: -5px;left: 0;right: 0;transform-origin: right;transform: scale(0, 1);transition: transform ease-in-out 500ms;}
+.tab-content li a:hover::after {transform: scale(1,1);}
 
 @media screen and (max-width: 1280px) {
     .nav-container {
