--- a/design.css
+++ b/design.css
@@ -20,20 +20,8 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
 .imgabout {position: absolute;right: 100px;top: 170px;width: 20%}
 .info{ clear: both; text-align: center;position: absolute;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
 
-.map-container{
-    overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
-    }
-    .map-container iframe{
-    left:40%;
-    top:0;
-    height:40%;
-    width:50%;
-    position:absolute;
-    }
-
+.map-container{overflow:hidden;padding-bottom:56.25%;position:relative;height:0;top:10%;}
+.map-container iframe{left:0;top:30px;height:100%;width:100%;position:absolute;}
 a {cursor: pointer;}
 header {position: fixed;top: 0;z-index: 1000;width: 100%;background: linear-gradient(to bottom, #F5F5DC, #800000) fixed;}
 .nav-container {width: 1280px;margin: auto;}
@@ -103,7 +91,8 @@ header {position: fixed;top: 0;z-index: 1000;width: 100%;background: linear-grad
     a {display: block; padding: 8px;}
     .imgabout {position: absolute;right: 100px;top: 100px;width: 15%;}
     .infoabout { clear: both;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white;margin-left: 10px} 
-    .map-container iframe{ left:20%;top:0;height:50%;width:50%;position:absolute; }
+    .map-container{overflow:hidden;padding-bottom:56.25%;position:relative;height:500px;top:10%;}
+    .map-container iframe{left:0;top:30px;height:100%;width:100%;position:absolute;}
   
 }
 
