--- a/design.css
+++ b/design.css
@@ -6,7 +6,7 @@ img { margin-left: auto; margin-right: auto; width: 100%;}
 .forma {text-align: center;font-family: 'Open Sans', sans-serif;color:white}
 textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;color:black}
 input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
-.imgcontact {width:23%;position: absolute;left: 70px;top: 235px; height: 28%;}
+.imgcontact {width:23%;position: absolute;left: 70px;top: 235px; height: 28%;border-image: 10px}
 .map {position: absolute;right: 100px;top: 170px; width:600px; height:450px;border:0px;border:0;}
 .adress {position: absolute;left: 250px;top: 170px;font-family: 'Open Sans', sans-serif;color:white }
 input[type=submit]:hover {background-color: #555555;font-family: 'Open Sans', sans-serif;}
@@ -14,11 +14,33 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
 .imgbook {width:20%; position: absolute;left: 10vh;top: 284px; height: 20vh;border-radius: 5px;}
 .infoabout {clear: both;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white;font-size:13px;margin-left: 200px} 
 .info2{ clear: both; text-align: center;width: 100%; bottom: 0;color:white;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
-.column {display: block; margin-right: 20%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 10px;height: 400px;font-family: 'Open Sans', sans-serif;} 
+.column {display: block; margin-right: 3%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 10px;height: 400px;font-family: 'Open Sans', sans-serif;} 
 .row:after {content: "";display: table;clear: both;}
-.imgservice {margin-right: 10%;float: right;width: 20%;padding: 10px;height: 200px; margin-top: 2%;position: sticky;}
+.imgservice {margin-right: 20%;float: right;width: 20%;padding: 10px;height: 200px; margin-top: 2%;position: sticky;}
 .imgabout {position: absolute;right: 100px;top: 170px;width: 20%}
 .info{ clear: both; text-align: center;position: absolute;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
+.bokaservice {margin-right: 1%;margin-top:70px;float: right;width: 150%;padding: 10px;height: 400px; position: sticky;display: block; font-family: 'Open Sans', sans-serif;color:black}
+
+.phone {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    margin-top: 195px;
+    margin-right:90px;
+    font-family: 'Open Sans', sans-serif;color:white;
+    font-size:15px;
+}
+
+.bookphone
+{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    margin-top: 195px;
+    margin-right:90px;
+    font-family: 'Open Sans', sans-serif;color:white;
+    font-size:15px;
+}
 
 .map-container{overflow:hidden;padding-bottom:56.25%;position:relative;height:0;top:10%;}
 .map-container iframe{left:0;top:30px;height:100%;width:100%;position:absolute;}
@@ -80,7 +102,7 @@ header {position: fixed;top: 0;z-index: 1000;width: 100%;background: linear-grad
     .adress {position: absolute;left: 100px;top: 500px;font-family: 'Open Sans', sans-serif; }
     .logo {float: left; margin-top: 3%; margin-left: 3%; font-size: 4vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
 
-    .column {margin-left:20px;display: block; border-radius: 5px;background: #F5F5DC;width: 20%;padding: 1px;height: 200px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static;} 
+    .column {margin-left:20px;display: block; border-radius: 5px;background: #F5F5DC;width: 50%;padding: 1px;height: 200px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static;} 
 
     .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
     .imgcontact {width:17%;position: absolute;left: 50px;top: 140px; height: 28%;}
