--- a/design.css
+++ b/design.css
@@ -3,6 +3,7 @@
 body {background: linear-gradient(to bottom, #F5F5DC , #800000) fixed;margin: 0;padding: 0;box-sizing: border-box;font-family: 'Open Sans', sans-serif;}
 img { margin-left: auto; margin-right: auto; width: 100%;}
 .forma {text-align: center;font-family: 'Open Sans', sans-serif;color:white}
+.formabook {text-align: center;font-family: 'Open Sans', sans-serif;color:white}
 textarea{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;color:black}
 input{background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px solid #ffffff;font-family: 'Open Sans', sans-serif;}
 .imgcontact {width:23%;position: absolute;left: 70px;top: 235px; height: 28%;border-image: 10px}
@@ -13,6 +14,7 @@ select {background-color: #F5F5DC;border-radius: 5px;width: 35%;border: 2px soli
 .imgbook {width:20%; position: absolute;left: 10vh;top: 284px; height: 20vh;border-radius: 5px;}
 .infoabout {clear: both;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white;font-size:13px;margin-left: 200px} 
 .info2{ clear: both; text-align: center;width: 100%; bottom: 0;color:white;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
+.info3{ clear: both; text-align: center;position: absolute;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
 .column {display: block; margin-right: 3%;border-radius: 5px;float: right;background: #F5F5DC;width: 20%;padding: 10px;height: 400px;font-family: 'Open Sans', sans-serif;} 
 .row:after {content: "";display: table;clear: both;}
 .imgservice {margin-right: 20%;float: right;width: 20%;padding: 10px;height: 200px; margin-top: 2%;position: sticky;}
@@ -52,13 +54,20 @@ header {position: fixed;top: 0;z-index: 1000;width: 100%;background: linear-grad
     .tab-content li {padding: 20px 0;}
 }
 @media all and (max-width: 670px)
-{ 
+{   .formabook {text-align: center;font-family: 'Open Sans', sans-serif;color:white;margin-top: 100px}
+    .phone {position: absolute;top: 0px;right: 0px;margin-top: 670px;margin-right:175px;font-family: 'Open Sans', sans-serif;color:white;font-size:15px;}
+    .forma {text-align: center;font-family: 'Open Sans', sans-serif;color:white;margin-top: 150px}
+    .bookphone{position: absolute;top: 0px;right: 0px;margin-top: 800px;margin-right:170px;font-family: 'Open Sans', sans-serif;color:white;font-size:15px;}
+    .info{margin-top:400px; clear: both; text-align: center;position: relative;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
+    .info3{margin-top:470px;  clear: both; text-align: center;width: 100%; bottom: 0;color:white;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
+
+    .bokaservice {margin-left: -300%;margin-top:70px;width: 300%;padding: 0px;height: 400px; position: sticky;display: block; font-family: 'Open Sans', sans-serif;color:black; list-style-type: none;}
     .adress {position: absolute;left: 100px;top: 500px;font-family: 'Open Sans', sans-serif; }
     .logo {float: left; margin-top: 3%; margin-left: 3%; font-size: 4vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
-    .column {margin-right:120px;display: block; border-radius: 5px;background: #F5F5DC;width: 50%;padding: 1px;height: 200px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static;} 
+    .column {margin:4px;margin-right:130px;display: block; border-radius: 5px;background: #F5F5DC;width: 50%;padding: 1px;height: 200px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static;} 
     .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
-    .imgcontact {width:17%;position: absolute;left: 50px;top: 140px; height: 28%;}
-    .imgbook {width:20%; position: absolute;left: 4vh;top: 310px; height: 20vh;}
+    .imgcontact {width:40%;position: absolute;left: 155px;top: 140px; height: 28%;}
+    .imgbook {width:40%; position: absolute;left: 155px;top: 150px; height: 20vh;}
     ul {list-style-type: none; margin: 0; padding:0;}
     li a {color: #00008B; padding: 3px 7px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
     li a:hover {background-color: lightgray}
@@ -67,6 +76,8 @@ header {position: fixed;top: 0;z-index: 1000;width: 100%;background: linear-grad
     .infoabout { clear: both;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white;margin-left: 10px} 
     .map-container{overflow:hidden;padding-bottom:56.25%;position:relative;height:500px;top:10%;}
     .map-container iframe{left:0;top:30px;height:100%;width:100%;position:absolute;}
+
+
 }
 
 
