--- a/design.css
+++ b/design.css
@@ -60,15 +60,15 @@ header {position: fixed;top: 0;z-index: 1000;width: 100%;background: linear-grad
     .bookphone{position: absolute;top: 0px;right: 0px;margin-top: 800px;margin-right:170px;font-family: 'Open Sans', sans-serif;color:white;font-size:15px;}
     .info{margin-top:450px; clear: both; text-align: center;position: relative;width: 100%; bottom: 0;color:black;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
     .info3{margin-bottom:-520px;  clear: both; text-align: center;width: 100%; bottom: 0;color:white;font-size:10px;font-family: 'Open Sans', sans-serif;color:white} 
-    img { margin-left: auto; margin-right: auto; width: 100%;height: 250px;}
+    img { margin-left: auto; margin-right: auto; width: 100%;}
 
-    .bokaservice {margin-left: -300%;margin-top:70px;width: 300%;padding: 0px;height: 400px; position: sticky;display: block; font-family: 'Open Sans', sans-serif;color:black; list-style-type: none;}
+    .bokaservice {margin-left: -300%;margin-top:10px;width: 300%;height: 10%; position: sticky;display: block; font-family: 'Open Sans', sans-serif;color:black; list-style-type: none;}
     .adress {position: absolute;left: 100px;top: 500px;font-family: 'Open Sans', sans-serif; }
     .logo {float: left; margin-top: 3%; margin-left: 3%; font-size: 4vh;max-width:100%;height:auto;font-family: 'Syncopate', sans-serif;color: #00008B;}
     .column {margin:4px;margin-right:130px;display: block; border-radius: 5px;background: #F5F5DC;width: 50%;padding: 1px;height: 200px;font-family: 'Open Sans', sans-serif;font-size:7px; position:static;} 
-    .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 2%;position: sticky;}
-    .imgcontact {width:40%;position: absolute;left: 155px;top: 130px; height: 28%;}
-    .imgbook {width:40%; position: absolute;left: 155px;top: 150px; height: 20vh;}
+    .imgservice {margin-right: 10%;float: right;width: 10%;padding: 10px;height: 20px; margin-top: 1%;position: sticky;}
+    .imgcontact {width:30%;position: absolute;left: 170px;top: 130px; height: 40%;}
+    .imgbook {width:40%; position: absolute;left: 155px;top: 140px;height: 10%;}
     ul {list-style-type: none; margin: 0; padding:0;}
     li a {color: #00008B; padding: 3px 7px; text-decoration: none; Display: block;font-family: 'Rajdhani', sans-serif;border-radius: 5px}
     li a:hover {background-color: lightgray}
